infrastructure/terraform/modules/compute/bastion.tf
# Security Group for Bastion
resource "aws_security_group" "bastion_sg" {
  name        = "${replace(lower(var.project), "_", "-")}-${var.environment}-bastion-sg"
  description = "Allow SSH traffic to bastion"
  vpc_id      = var.vpc_id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name        = "${var.project}-${var.environment}-bastion-sg"
    Environment = var.environment
  }
}

# EC2 instance for the bastion host
resource "aws_instance" "bastion" {
  ami                         = data.aws_ami.amazon_linux.id
  instance_type               = "t2.micro"
  subnet_id                   = var.public_subnets[0]
  vpc_security_group_ids      = [aws_security_group.bastion_sg.id]
  key_name                    = var.key_name
  associate_public_ip_address = true

  tags = {
    Name        = "${var.project}-${var.environment}-jump-box"
    Environment = var.environment
  }
}
